Refactor DB update functions to reflect new DB config behavior, change PutBook 409 status code to 404 and update docs
