# docs/swagger.json
@@ -210,8 +210,8 @@
                             "$ref": "#/definitions/models.Error"
                         }
                     },
-                    "409": {
-                        "description": "Conflict -  No resource found or didn't change resource",
+                    "404": {
+                        "description": "Not Found -  No resource found",
                         "schema": {
                             "$ref": "#/definitions/models.Error"
                         }
@@ -283,7 +283,7 @@
                         }
                     },
                     "404": {
-                        "description": "Not Found -  No resource found or didn't change resource",
+                        "description": "Not Found -  No resource found",
                         "schema": {
                             "$ref": "#/definitions/models.Error"
                         }
